Changelog for HybridAuth.

0.7.0 pl
==============
- New snippet "haProfile" for update user profile.
- Added virtual field "gravatar" to class "haUser". You can get it with $modx->user->get('gravatar');.
- Extension package is removed from system settings when you uninstall component.
- Replaced file "action.php" to plugin "HybridAuth".
- [#3] Fixed "No foreign key definition for parentClass: modUser using relation alias: Services" log entries.
- Added new providers: "Draugiem" and "Xing".


0.6.0 pl
==============
- Added ability to disable new user registrations. See system setting "ha.register_users".

0.5.0 beta
==============
- Fixed login trough vk.com
- Updated HybridAuth core to version 2.1.2

0.4.0 beta
==============
- Updated HybridAuth core to version 2.1.1
- Improved initialization of main class

0.3.3 beta
==============
- Fixed issue with empty email

0.3.2 beta
==============
- Added exception handler for catching all exceptions from HybridAuth into MODX system log

0.3.1 beta
==============
- Changing user class to haUser on login through remote service.
- On uninstall of component all haUsers becomes modUsers.

0.3.0 beta
==============
- Fixed save of a photo in profile.
- Improved errors handling.
- Fixed increment of username if remote username exists on site.
- If authenticated user linking remote service record, that already exists in remote profiles of the site - this record changes the owner. You can re-link any of your records to any accounts on site.

0.2.0 beta
==============
- Added parameter &groups=``. For example, &groups=`Users:1` will add new user to group "Users" with role "member"
- Updated snippet params, added russian localization.
- Chunks localization
- Updated readme

0.1.0 beta
==============
- Initial release.