@@ -225,12 +225,10 @@ if (defined('BUILD_PLUGIN_UPDATE')) {
 $vehicle = $builder->createVehicle($category,$attr);
 
 /* now pack in resolvers */
-/*
 $vehicle->resolve('file',array(
 	'source' => $sources['source_assets'],
 	'target' => "return MODX_ASSETS_PATH . 'components/';",
 ));
-*/
 $vehicle->resolve('file',array(
 	'source' => $sources['source_core'],
 	'target' => "return MODX_CORE_PATH . 'components/';",
