@@ -1,5 +1,5 @@
 [[%ha.login_intro]]
-<a href="[[+login_url]]&provider=Yandex">Yandex</a>,
-<a href="[[+login_url]]&provider=Google">Google</a>,
-<a href="[[+login_url]]&provider=Twitter">Twitter</a>
+<br/>
+[[+providers]]
+
 [[+error:notempty=`<div class="alert alert-block alert-error">[[+error]]</div>`]]
