@@ -1,0 +1,1 @@
+<a href="[[+login_url]]&provider=[[+title]]" class="ha-icon [[+provider]]" rel="noindex">[[+title]]</a>
