@@ -11,16 +11,23 @@ $_lang['ha_err_no_provider_keys'] = 'Could not retrieve keys for provider [[+pro
 $_lang['ha_err_not_logged_in'] = 'You must be logged in to edit your profile.';
 $_lang['ha_register_disabled'] = 'Creation of new users is disabled.';
 
-/* Chunks */
 $_lang['ha.username'] = 'Username';
 $_lang['ha.fullname'] = 'Full name';
 $_lang['ha.email'] = 'Email';
 $_lang['ha.updateProfile'] = 'Update Profile';
 $_lang['ha.profile_update_success'] = 'Profile was updated successfully';
 $_lang['ha.profile_update_error'] = 'Error when update profile';
-$_lang['ha.logout'] = 'Logout';
-$_lang['ha.greeting'] = 'Welcome, ';
+$_lang['ha.logout'] = 'Logout &rarr;';
+$_lang['ha.save_profile'] = 'Save profile';
+$_lang['ha.greeting'] = 'You are logged in as ';
 $_lang['ha.providers_available'] = 'Available providers are ';
 $_lang['ha.login_intro'] = 'You can authorize on site with: ';
 $_lang['ha.gravatar'] = 'Avatar';
 $_lang['ha.gravatar_desc'] = 'Image loads from <a href="http://gravatar.com/" target="_blank">Gravatar</a>';
+
+$_lang['area_ha.main'] = 'Main';
+$_lang['area_ha.keys'] = 'Keys';
+$_lang['setting_ha.frontend_css'] = 'Styles of frontend';
+$_lang['setting_ha.frontend_css_desc'] = 'Path to the file with styles of component. If you want to use your own styles - specify the path to it here, or clear and include them manually via the website template.';
+$_lang['setting_ha.register_users'] = 'Register new';
+$_lang['setting_ha.register_users_desc'] = 'This setting determines whether to create new users with authorization through HybridAuth.';
