@@ -11,16 +11,23 @@ $_lang['ha_err_no_provider_keys'] = 'Не могу получить ключи [
 $_lang['ha_err_not_logged_in'] = 'Вы должны быть авторизованы для редактирования своего профиля.';
 $_lang['ha_register_disabled'] = 'Регистрация новых пользователей отключена.';
 
-/* Chunks */
 $_lang['ha.username'] = 'Логин';
 $_lang['ha.fullname'] = 'Имя пользователя';
 $_lang['ha.email'] = 'Email';
 $_lang['ha.updateProfile'] = 'Обновить профиль';
 $_lang['ha.profile_update_success'] = 'Профиль успешно обновлен';
 $_lang['ha.profile_update_error'] = 'Ошибка при обновлении профиля';
-$_lang['ha.logout'] = 'Разлогиниться';
-$_lang['ha.greeting'] = 'Приветствую, ';
+$_lang['ha.logout'] = 'Выйти &rarr;';
+$_lang['ha.save_profile'] = 'Сохранить профиль';
+$_lang['ha.greeting'] = 'Вы авторизованы как ';
 $_lang['ha.providers_available'] = 'Доступны провайдеры ';
 $_lang['ha.login_intro'] = 'Вы можете авторизоваться на сайте через: ';
 $_lang['ha.gravatar'] = 'Аватар';
 $_lang['ha.gravatar_desc'] = 'Картинка загружается с <a href="http://gravatar.com/" target="_blank">Gravatar</a>';
+
+$_lang['area_ha.main'] = 'Основные';
+$_lang['area_ha.keys'] = 'Ключи';
+$_lang['setting_ha.frontend_css'] = 'Стили фронтенда';
+$_lang['setting_ha.frontend_css_desc'] = 'Путь к файлу со стилями компонента. Если вы хотите использовать собственные стили - укажите путь к ним здесь, или очистите параметр и загрузите их вручную через шаблон сайта.';
+$_lang['setting_ha.register_users'] = 'Регистрировать новых';
+$_lang['setting_ha.register_users_desc'] = 'Эта настройка определяет, нужно ли создавать новых пользователей при авторизации через HybridAuth.';
