@@ -11,16 +11,23 @@ $_lang['ha_err_no_providers'] = 'Ви повинні вказати хоча б 
 $_lang['ha_err_not_logged_in'] = 'Ви повинні бути авторизовані для редагування свого профілю';
 $_lang['ha_err_no_provider_keys'] = 'Не можу отримати ключі [[+provider]] з системних налаштувань. [[+provider]] не було активовано.';
 
-/* Chunks */
 $_lang['ha.username'] = 'Логін';
 $_lang['ha.fullname'] = 'Ім’я користувача';
 $_lang['ha.email'] = 'Email';
 $_lang['ha.updateProfile'] = 'Оновити профіль';
 $_lang['ha.profile_update_success'] = 'Профіль оновлено';
 $_lang['ha.profile_update_error'] = 'Помилка при оновлені профілю';
-$_lang['ha.logout'] = 'Вийти';
-$_lang['ha.greeting'] = 'Привіт, ';
+$_lang['ha.logout'] = 'Вийти &rarr;';
+$_lang['ha.save_profile'] = 'Зберегти профіль';
+$_lang['ha.greeting'] = 'Ви авторизовані як ';
 $_lang['ha.providers_available'] = 'Доступні провайдери ';
 $_lang['ha.login_intro'] = 'Ви можете авторизуватись на сайті за допомоги: ';
 $_lang['ha.gravatar'] = 'Аватар';
 $_lang['ha.gravatar_desc'] = 'Картинка завантажується з <a href="http://gravatar.com/" target="_blank">Gravatar</a>';
+
+$_lang['area_ha.main'] = 'Основні';
+$_lang['area_ha.keys'] = 'Ключі';
+$_lang['setting_ha.frontend_css'] = 'Стилі фронтенда';
+$_lang['setting_ha.frontend_css_desc'] = 'Шлях до файлу зі стилями компонента. Якщо ви хочете використовувати власні стилі - вкажіть шлях до них тут, або очистіть параметр і завантажте їх вручну через шаблон сайту.';
+$_lang['setting_ha.register_users'] = 'Реєструвати нових';
+$_lang['setting_ha.register_users_desc'] = 'Цей параметр визначає, чи потрібно створювати нових користувачів при авторизації через HybridAuth.';
