@@ -3,12 +3,13 @@ Changelog for HybridAuth.
 0.7.0 pl
 ==============
 - New snippet "haProfile" for update user profile.
+- Automatic generation of links of providers.
+- Improved chunks, added icons for some providers.
 - Added virtual field "gravatar" to class "haUser". You can get it with $modx->user->get('gravatar');.
 - Extension package is removed from system settings when you uninstall component.
 - Replaced file "action.php" to plugin "HybridAuth".
-- [#3] Fixed "No foreign key definition for parentClass: modUser using relation alias: Services" log entries.
 - Added new providers: "Draugiem" and "Xing".
-
+- [#3] Fixed "No foreign key definition for parentClass: modUser using relation alias: Services" log entries.
 
 0.6.0 pl
 ==============
